# dictionary

./: .gitignore  .golangci.yml  CLAUDE.md  README.md  go.work  go.work.sum
.claude/: settings.json
.claude/agents/: agy-worker.md  codex-worker.md
.claude/commands/: tri-review.md
.github/workflows/: quality.yml  release.yml
apps/desktop-ui/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
apps/desktop-ui/scripts/: build-sidecar.mjs
apps/desktop-ui/src/: App.css  App.tsx  labels.ts  main.tsx
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/capabilities/: default.json
apps/desktop-ui/src-tauri/src/: lib.rs  main.rs  notifications.rs  popup.rs  sidecar.rs  tray.rs
apps/desktop-ui/src/api/: client.ts
apps/desktop-ui/src/dashboard/: Dashboard.css  Dashboard.tsx
apps/desktopd/: Makefile  README.md  go.mod  go.sum
deploy/: README.md
docs/: README.md  development.md  glossary.md  prd.md  rw-11-platform-verification.md
docs/adr/: ADR-0001-monorepo.md  ADR-0002-tauri-go-sidecar.md  ADR-0003-sqlite-local-first.md  ADR-0004-ai-provider.md  ADR-0005-frontend-framework.md  ADR-0006-product-name.md  ADR-0007-sqlite-driver-migration.md  ADR-0008-sidecar-ui-notifications.md  ADR-0009-platform-scope-linux-deferred.md  README.md
docs/planning/: backlog.md  remaining-work.md
docs/reviews/: 2026-07-07-adr-0007.md  2026-07-07-desktopd-v01-code.md  2026-07-22-project-review.md  README.md
docs/rules/: ai-collaboration.md  development-cycle.md  github-workflow.md
scripts/: README.md
(+146 files in other folders)
